[Help] 메시지 전송 로직에서 문제가 있는 부분 수정 (#52)
* feat: 문자 임시 저장 기능 구현

* chore: Ppurio API 설정 추가

* feat: WIP

* fix: WIP

* fix : 불필요 필드 삭제

---------

Co-authored-by: rokaf6444 <dino1106@naver.com>
Co-authored-by: enble <enble_777@naver.com>