@@ -1,11 +1,12 @@
 package com.pictalk.message.controller;
 
-import static com.pictalk.message.service.MessageService.getReceiversAsString;
-
 import com.pictalk.global.payload.response.CommonResponse;
 import com.pictalk.message.domain.Message;
 import com.pictalk.message.domain.MessageImage;
+import com.pictalk.message.domain.Receiver;
+import com.pictalk.message.dto.MessageRequestDto;
 import com.pictalk.message.dto.MessageRequestDto.SendMessageRequest;
+import com.pictalk.message.dto.MessageResponseDto;
 import com.pictalk.message.dto.MessageResponseDto.CancelMessageResponse;
 import com.pictalk.message.dto.MessageResponseDto.MessageResponse;
 import com.pictalk.message.dto.MessageResponseDto.SendMessageResponse;
@@ -36,12 +37,13 @@ public class MessageController {
     public CommonResponse<SendMessageResponse> sendMessage(@AuthenticationPrincipal UserDetails authenticatedPrincipal,
                                                            @Valid @RequestBody SendMessageRequest request) {
         String userEmail = authenticatedPrincipal.getUsername();
-        SendMessageResponse response = messageService.sendMessage(request, userEmail);
+        MessageResponseDto.SendMessageResponse response = messageService.sendMessage(request, userEmail);
         return CommonResponse.onSuccess(response);
     }
 
     @GetMapping
-    public CommonResponse<List<MessageResponse>> getMessages(@AuthenticationPrincipal UserDetails authenticatedPrincipal) {
+    public CommonResponse<List<MessageResponse>> getMessages(
+            @AuthenticationPrincipal UserDetails authenticatedPrincipal) {
         String userEmail = authenticatedPrincipal.getUsername();
         List<Message> messages = messageService.getMessages(userEmail);
 
@@ -53,7 +55,7 @@ public class MessageController {
                 .messageImages(getImageUrls(message.getMessageImages()))
                 .status(message.getStatus().toString())
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
 
         return CommonResponse.onSuccess(messageResponses);
     }
@@ -61,20 +63,32 @@ public class MessageController {
     private List<String> getImageUrls(List<MessageImage> messageImages) {
         return messageImages.stream()
                 .map(messageImage -> messageImage.getImage().getImageUrl())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/{message-id}")
     public CommonResponse<MessageResponse> getMessage(@AuthenticationPrincipal UserDetails authenticatedPrincipal,
                                                       @PathVariable("message-id") Long messageId) {
         String userEmail = authenticatedPrincipal.getUsername();
-        MessageResponse response = messageService.getMessage(messageId, userEmail);
+        Message message = messageService.getMessage(messageId, userEmail);
+
+        MessageResponse response = MessageResponse.builder()
+                .messageId(message.getId())
+                .content(message.getContent())
+                .to(getReceiversAsString(message.getReceivers()))
+                .sendTime(message.getSentAt() != null ? message.getSentAt().toString() : null)
+                .status(message.getStatus().toString())
+                .messageImages(message.getMessageImages().stream()
+                        .map(messageImage -> messageImage.getImage().getImageUrl())
+                        .collect(Collectors.toList()))
+                .build();
         return CommonResponse.onSuccess(response);
     }
 
     @PatchMapping("/{message-id}")
-    public CommonResponse<CancelMessageResponse> cancelScheduledMessage(@AuthenticationPrincipal UserDetails authenticatedPrincipal,
-                                                                        @PathVariable("message-id") Long messageId) {
+    public CommonResponse<CancelMessageResponse> cancelScheduledMessage(
+            @AuthenticationPrincipal UserDetails authenticatedPrincipal,
+            @PathVariable("message-id") Long messageId) {
         String userEmail = authenticatedPrincipal.getUsername();
         CancelMessageResponse response = messageService.cancelScheduledMessage(messageId, userEmail);
         return CommonResponse.onSuccess(response);
@@ -86,5 +100,20 @@ public class MessageController {
         String userEmail = authenticatedPrincipal.getUsername();
         messageService.deleteMessage(messageId, userEmail);
         return CommonResponse.onSuccess(null);
+    }
+
+    @PostMapping("/temp")
+    public CommonResponse<MessageResponseDto.TempMessageResponse> saveTempMessage(
+            @AuthenticationPrincipal UserDetails authenticatedPrincipal,
+            @Valid @RequestBody MessageRequestDto.TempMessageRequest request) {
+        String userEmail = authenticatedPrincipal.getUsername();
+        MessageResponseDto.TempMessageResponse response = messageService.saveTempMessage(request, userEmail);
+        return CommonResponse.onSuccess(response);
+    }
+
+    private String getReceiversAsString(List<Receiver> receivers) {
+        return receivers.stream()
+                .map(Receiver::getPhoneNumber)
+                .collect(Collectors.joining(", "));
     }
 }
